styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('./navBar.css');
@import url('./timeline.css');
@import url('./kbar.css');

@layer base {
    body {
        @apply transition-all ease-in duration-300;
        @apply dark:bg-[url('/assets/bg-dark.png')];
        @apply bg-[url('/assets/bg-light.png')];
        @apply bg-no-repeat;
        @apply bg-cover;
        @apply bg-center;
        @apply bg-fixed;
        @apply min-h-screen relative;
        @apply overflow-y-scroll;
        scrollbar-color: #6969dd #e0e0e0;
        scrollbar-width: thin;
    }

    h1, h2, h3, span {
        @apply text-black dark:text-white;
    }

    kbd {
      font-family: monospace;
    }
    
    ::-webkit-scrollbar {
        @apply w-2;
    }
    
    ::-webkit-scrollbar-track {
        @apply bg-gray-700;
    }
    
    ::-webkit-scrollbar-thumb {
        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.9);
        @apply bg-zinc-50
    }

    .rounded-swap-button {
        @apply border-gray-500 hover:border-black dark:border-gray-500 dark:hover:border-white duration-500 inline-flex items-center justify-center p-1 h-12 w-12 border-[3px] rounded-full overflow-hidden;
    }
    .rounded-swap-1 {
        @apply absolute inset-0 text-black dark:text-white transform rotate-90 transition-transform duration-700;
    }
    .rounded-swap-2 {
        @apply absolute inset-0 text-black dark:text-white transform rotate-0 transition-transform duration-700;
    }

    .content-wrapper {
        @apply m-auto pt-8 md:pt-16 lg:pt-28 xl:pt-32 px-4 md:px-10 pb-24 md:pb-20;
    }
    .footer-wrapper {
        @apply w-full md:w-fit bottom-0 left-0 md:left-auto absolute h-20 md:h-10 lg:h-14 flex content-center max-w-7xl;
    }
    .footer {
        @apply w-full md:w-fit text-center md:text-left my-4 text-xl text-gray-500 dark:text-gray-400 pb-4;
    }

    .border-tiny-black {
        border-color: rgb(0,0,0,0.15);
        @apply border-[1px];
    }
    .border-tiny-white {
        border-color: rgb(255,255,255,0.15);
        @apply border-[1px];
    }

    .tag {
        @apply rounded-full px-2 py-[1px] pb-[2px] font-semibold  text-sm;
    }
    .tech-tag-colors-light {
        @apply bg-sky-200 text-black;
    }
    .tech-tag-colors-dark {
        background-color: rgba(144, 205, 244, 0.16);
        color: rgb(144, 205, 244) !important;
    }
    .year-tag-colors-light {
        @apply bg-emerald-300 text-black;
    }
    .year-tag-colors-dark {
        background-color: rgba(129, 230, 217, 0.16);
        color: rgb(129, 230, 217) !important;
    }
}

